syntax = "proto3";
package backoff;

// BackoffKind is the kind of backoff.
enum BackoffKind {
  // BackoffKind_UNKNOWN defaults to BackoffKind_EXPONENTIAL
  BackoffKind_UNKNOWN = 0;
  // BackoffKind_EXPONENTIAL is an exponential backoff.
  BackoffKind_EXPONENTIAL = 1;
  // BackoffKind_CONSTANT is a constant backoff.
  BackoffKind_CONSTANT = 2;
}

// Backoff configures a backoff.
message Backoff {
  // BackoffKind is the kind of backoff.
  BackoffKind backoff_kind = 1;

  // Exponential is the arguments for an exponential backoff.
  Exponential exponential = 2;
  // Constant is the arugment for a constant backoff.
  Constant constant = 3;
}

// Exponential is the exponential arguments.
message Exponential {
  // InitialInterval is the initial interval in milliseconds.
  // Default: 800ms.
  uint32 initial_interval = 1;
  // Multiplier is the timing multiplier.
  // Default: 1.8
  float multiplier = 2;
  // MaxInterval is the maximum timing interval in milliseconds.
  // Default: 20 seconds
  uint32 max_interval = 3;
  // RandomizationFactor is the randomization factor.
  // Default: 0
  float randomization_factor = 4;
  // MaxElapsedTime if set specifies a maximum time for the backoff, in milliseconds.
  // After this time the backoff and attached process terminates.
  // May be empty, might be ignored.
  uint32 max_elapsed_time = 5;
}

// Constant contains constant backoff options.
message Constant {
  // Interval is the timing to back off, in milliseconds.
  // Defaults to 5 seconds.
  uint32 interval = 1;
}